<resources>
    <string name="app_name">Pakko</string>
    <string name="element_list">Elements</string>
    <string name="add_element">Ajouter</string>
    <string name="add_element_2">Enregistrer un élément</string>
    <string name="categories_list">Categories</string>
    <string name="element">Element</string>
    <string name="button_delete">Supprimer</string>
    <string name="element_deleted">Élément supprimé</string>
    <string name="create_new_element">Créer un nouvel élément</string>
    <string name="select_existing_element">Choisir parmi les éléments existants</string>
    <string name="button_save_element">Sauvegarder</string>
    <string name="element_name_edit_text">Nom de l\'élément</string>
    <string name="category">categorie</string>
    <string name="popup_title_create_category">Créer une catégorie</string>
    <string name="popup_title_edit_category">Modifier une catégorie</string>
    <string name="category_name_edit_text">Nom de la catégorie</string>
    <string name="element_comment">commentaire</string>
    <string name="remove_from_category">Supprimer de la catégorie</string>
    <string name="edit_item">Modifier l\'élément</string>
    <string name="modify_element_comment_edit_text">Modifier le commentaire</string>
    <string name="popup_title_add_element_to_categories">Ajouter à des catégories</string>
    <string name="unknown_error">Erreur inconnue</string>
    <string name="category_name_already_used">Nom de catégorie déjà utilisé.</string>
    <string name="element_saved">Élement enregistré</string>
    <string name="element_removed_from_category">L\'élément a été supprimé de la catégorie.</string>
    <string name="action_import">Importer</string>
    <string name="action_export">Exporter</string>
    <string name="import_ok">Import réussi</string>
    <string name="export_ok">Export réussi</string>
</resources>