<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical"
    android:padding="16dp">

    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/drag_handle_background" />

    <TextView
        android:id="@+id/element_title"
        style="@style/TitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center_horizontal"
        android:text="@string/element" />

    <EditText
        android:id="@+id/entry_element_comment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_background"
        android:hint="@string/modify_element_comment_edit_text"
        android:imeOptions="actionDone"
        android:inputType="textCapWords"
        android:maxLength="40"
        android:paddingHorizontal="12dp"
        android:singleLine="true"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/button_edit_element"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@color/popup_background"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_icons"
            android:padding="6dp"
            android:src="@drawable/ic_edit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/edit_item"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_remove_element_from_category"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/popup_background"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_icons"
            android:padding="6dp"
            android:src="@drawable/ic_trash" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/remove_from_category"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
